force-app/main/default/objects/Lead/fields/Albacross_Segment__c.field-meta.xml
<CustomField>
    <fullName>Albacross_Segment__c</fullName>
    <description>Different segments of leads have been created in Albacross. This field defines which segment the lead is coming from.</description>
    <label>Albacross Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB Tier 1</fullName>
            </value>
            <value>
                <fullName>SMB Tier 2</fullName>
            </value>
            <value>
                <fullName>LCS Working</fullName>
            </value>
            <value>
                <fullName>Small Segment(Pre-Sales)</fullName>
            </value>
            <value>
                <fullName>Large Segment (Prospecting)</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>