force-app/main/default/objects/Lead/fields/Avg_Paid_Credit_Used_Lead__c.field-meta.xml
<CustomField>
    <fullName>Avg_Paid_Credit_Used_Lead__c</fullName>
    <description>The average Paid Credit Used based on the average of all accounts in this HeyJobs Category. User for wallet size calculation. RO - 1918</description>
    <formula>CASE(
HeyJobs_Category__c,
&quot;Call center&quot;, 715,
&quot;Logistics&quot;, 532,
&quot;Retail&quot;, 581,
&quot;Temporary Employment Agencies&quot;, 724,
&quot;Services&quot;, 720,
&quot;Hospitality&quot;, 658,
&quot;e-commerce&quot;, 808,
&quot;Healthcare&quot;, 823,
&quot;Production&quot;, 758,
&quot;Banking and Insurance&quot;, 823,
&quot;Agency&quot;, 271,
&quot;High-End&quot;, 827,
&quot;Headhunter&quot;, 412,
&quot;Office&quot;, 799,
&quot;Public Sector&quot;, 825,
693
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The average Paid Credit Used based on the average of all accounts in this HeyJobs Category. User for wallet size calculation.</inlineHelpText>
    <label>Avg Paid Credit Used - Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>