force-app/main/default/objects/Lead/fields/Bookings_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Bookings_last_12_months__c</fullName>
    <label>Bookings last 12 months (Lead)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>