force-app/main/default/objects/Lead/fields/Bookit_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Bookit_Log_ID__c</fullName>
    <description>ID from the Bookit Forms Meeting.</description>
    <inlineHelpText>ID from the Bookit Forms Meeting.</inlineHelpText>
    <label>Bookit Log ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>