force-app/main/default/objects/Lead/fields/Category_1__c.field-meta.xml
<CustomField>
    <fullName>Category_1__c</fullName>
    <label>Category 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>