force-app/main/default/objects/Lead/fields/Category_2__c.field-meta.xml
<CustomField>
    <fullName>Category_2__c</fullName>
    <label>Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant &amp; IT</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Leisure &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Gastronomy &amp; Tourism</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Real Estate &amp; Building Service</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>Media &amp; Agencies</fullName>
            </value>
            <value>
                <fullName>Transport &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>DIY &amp; Furnishings</fullName>
            </value>
            <value>
                <fullName>Drugstore &amp; Household</fullName>
            </value>
            <value>
                <fullName>Food Stores</fullName>
            </value>
            <value>
                <fullName>Fashion &amp; Lifestyle</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Car</fullName>
            </value>
            <value>
                <fullName>Car Industry &amp; Aircraft Construction</fullName>
            </value>
            <value>
                <fullName>Construction Industry &amp; Steel</fullName>
            </value>
            <value>
                <fullName>Chemical Industry</fullName>
            </value>
            <value>
                <fullName>Electrical Engineering &amp; Medical Technology</fullName>
            </value>
            <value>
                <fullName>Beverage &amp; Tobacco</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Consumer Goods Manufacturers</fullName>
            </value>
            <value>
                <fullName>Food Industry</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>