force-app/main/default/objects/Lead/fields/Conversion_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Trigger</label>
    <type>Checkbox</type>
</CustomField>