force-app/main/default/objects/Lead/fields/Converted_By__c.field-meta.xml
<CustomField>
    <fullName>Converted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ConvertedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>