force-app/main/default/objects/Lead/fields/Cornerstone_Jobreferenznummer__c.field-meta.xml
<CustomField>
    <fullName>Cornerstone_Jobreferenznummer__c</fullName>
    <description>https://heyjobs.atlassian.net/browse/RO-2469</description>
    <label>Cornerstone Jobreferenznummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>