force-app/main/default/objects/Lead/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>