force-app/main/default/objects/Lead/fields/Dealfront_ID_Lead__c.field-meta.xml
<CustomField>
    <fullName>Dealfront_ID_Lead__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to identify records coming from dealfront</description>
    <externalId>true</externalId>
    <label>Dealfront ID (Lead)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>