force-app/main/default/objects/Lead/fields/Deduplication_Parent__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deduplication Parent</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>