force-app/main/default/objects/Lead/fields/Domain_Match_on_Lead__c.field-meta.xml
<CustomField>
    <fullName>Domain_Match_on_Lead__c</fullName>
    <label>Domain Match on Lead</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>