force-app/main/default/objects/Lead/fields/Duplicate_Checked__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1311</description>
    <label>Duplicate Checked</label>
    <type>Checkbox</type>
</CustomField>