force-app/main/default/objects/Lead/fields/Email_verified__c.field-meta.xml
<CustomField>
    <fullName>Email_verified__c</fullName>
    <defaultValue>(&quot;OK&quot;)</defaultValue>
    <label>Email verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Risky</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>No cold Email</fullName>
                <label>No Cold Email</label>
            </value>
            <value>
                <fullName>No Nurturing Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>