force-app/main/default/objects/Lead/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <description>This field is used to add leads or contacts to a</description>
    <label>Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrichment Pending</fullName>
            </value>
            <value>
                <fullName>Enrichment Successful</fullName>
            </value>
            <value>
                <fullName>Enrichment Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>