force-app/main/default/objects/Lead/fields/Estimated_Wallet_Size_Lead__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wallet_Size_Lead__c</fullName>
    <description>Estimated Wallet Size based on Employee Number, Average Paid Credit Used and Estimated Fluctuation. RO- 1918, RO - 2560</description>
    <formula>IF(
 EWS_Fallback_Lead__c  &lt;  Bookings_last_12_months__c ,
Bookings_last_12_months__c,
 EWS_Fallback_Lead__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Wallet Size based on Employee Number, Average Paid Credit Used and Estimated Fluctuation.</inlineHelpText>
    <label>Estimated Wallet Size - Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>