force-app/main/default/objects/Lead/fields/Event_Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Event_Lead_Classification__c</fullName>
    <description>Used to prioritise the leads coming from the event, Hot being the highest priority</description>
    <label>Event Lead Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOT</fullName>
            </value>
            <value>
                <fullName>WARM</fullName>
            </value>
            <value>
                <fullName>COLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>