force-app/main/default/objects/Lead/fields/EWS_Fallback_Lead__c.field-meta.xml
<CustomField>
    <fullName>EWS_Fallback_Lead__c</fullName>
    <description>RO - 2560</description>
    <inlineHelpText>This field contains the EWS Fallback score which is used for calculating the Estimated Wallet size value. It is calculated based on the number of employees and category 3 value.</inlineHelpText>
    <label>EWS Fallback ( Lead)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>