force-app/main/default/objects/Lead/fields/Exclude_MQLs_lead__c.field-meta.xml
<CustomField>
    <fullName>Exclude_MQLs_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to exclude MQLs from List views and Sales Handover</description>
    <inlineHelpText>If this checkbox is true the MQL will not appear in Sales List views that filter for this property</inlineHelpText>
    <label>Exclude MQLs</label>
    <type>Checkbox</type>
</CustomField>