force-app/main/default/objects/Lead/fields/Existing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-1313</description>
    <inlineHelpText>Enter Account Name of an existing account to convert lead as a new contact for this account</inlineHelpText>
    <label>Existing Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Existing Account Name)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>