force-app/main/default/objects/Lead/fields/GTM_Motion_Lead__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Lead__c</fullName>
    <description>GTM Motion on lead defined by EWS only</description>
    <formula>IF(
 Estimated_Wallet_Size_Lead__c &lt; 75000 , &quot;Inside Sales&quot; ,
IF(
 Estimated_Wallet_Size_Lead__c &gt;= 1000000 , &quot;Enterprise New Business&quot; ,
 &quot;Subscription New Business&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GTM Motion defined by EWS</inlineHelpText>
    <label>GTM Motion Lead</label>
    <type>Text</type>
</CustomField>