force-app/main/default/objects/Lead/fields/HeyJobs_Category__c.field-meta.xml
<CustomField>
    <fullName>HeyJobs_Category__c</fullName>
    <inlineHelpText>indicates the industry where the lead works and is necessary to assign it to industry experts in the HeyJobs teams</inlineHelpText>
    <label>HeyJobs - Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Call center</fullName>
            </value>
            <value>
                <fullName>Headhunter</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>High-End</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Temporary Employment Agencies</fullName>
            </value>
            <value>
                <fullName>Banking and Insurance</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
                <isActive>false</isActive>
                <label>Hotels</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>