force-app/main/default/objects/Lead/fields/Inbound_Source__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Source__c</fullName>
    <description>How did they found out about us?</description>
    <inlineHelpText>How did they found out about us?</inlineHelpText>
    <label>Inbound Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Briefpost</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Hotline</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
            <value>
                <fullName>Internetwerbung</fullName>
            </value>
            <value>
                <fullName>Kollegen</fullName>
            </value>
            <value>
                <fullName>Kollegen_Bekannte</fullName>
                <label>Kollegen &amp; Bekannte</label>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Messen</fullName>
            </value>
            <value>
                <fullName>Online Demo</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Presse</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Radio/Podcast</fullName>
            </value>
            <value>
                <fullName>Social_Media</fullName>
                <label>Social Media</label>
            </value>
            <value>
                <fullName>Social Selling</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Webinar Sign Up</fullName>
            </value>
            <value>
                <fullName>Xing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>