force-app/main/default/objects/Lead/fields/Interested_in_Demo_lead__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Demo_lead__c</fullName>
    <label>Interested in Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>