force-app/main/default/objects/Lead/fields/Is_Agency_contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Agency_contact__c</fullName>
    <description>Used to filter inbound agency leads from events</description>
    <label>Event Agency check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>false</fullName>
                <isActive>false</isActive>
                <label>false</label>
            </value>
            <value>
                <fullName>true</fullName>
                <isActive>false</isActive>
                <label>true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>