force-app/main/default/objects/Lead/fields/Is_Original_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Original_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Original Lead</label>
    <type>Checkbox</type>
</CustomField>