force-app/main/default/objects/Lead/fields/Is_Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Ultimate_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uses this clay table https://app.clay.com/workspaces/366316/workbooks/wb_0ta0fxmj6zgo9K4XC8f/tables/t_0ta0fxmyxVWcosBCHUT/views/gv_0ta0fxnfdKWgb3wmeUc to figure out whether or not the lead is part of the ultimate parent company.</description>
    <inlineHelpText>Uses this clay table https://app.clay.com/workspaces/366316/workbooks/wb_0ta0fxmj6zgo9K4XC8f/tables/t_0ta0fxmyxVWcosBCHUT/views/gv_0ta0fxnfdKWgb3wmeUc to figure out whether or not the lead is part of the ultimate parent company.</inlineHelpText>
    <label>Is Ultimate Parent</label>
    <type>Checkbox</type>
</CustomField>