force-app/main/default/objects/Lead/fields/Jobseeker_Score__c.field-meta.xml
<CustomField>
    <fullName>Jobseeker_Score__c</fullName>
    <description>This is a score determined by this clay table: https://app.clay.com/workspaces/366316/workbooks/wb_0ta0fxmj6zgo9K4XC8f/tables/t_0ta0fxmyxVWcosBCHUT/views/gv_0ta0fxnfdKWgb3wmeUc to classify the likelihood of this being a jobseeker, 10 being very likely.</description>
    <inlineHelpText>This is a score determined by this clay table: https://app.clay.com/workspaces/366316/workbooks/wb_0ta0fxmj6zgo9K4XC8f/tables/t_0ta0fxmyxVWcosBCHUT/views/gv_0ta0fxnfdKWgb3wmeUc to classify the likelihood of this being a jobseeker, 10 being very likely.</inlineHelpText>
    <label>Jobseeker Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>