force-app/main/default/objects/Lead/fields/last_event_attended__c.field-meta.xml
<CustomField>
    <fullName>last_event_attended__c</fullName>
    <description>Used to filter incoming leads from event in salesforce list views</description>
    <label>Last event attended</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2026 Procare Hannoverr</fullName>
            </value>
            <value>
                <fullName>2026 Health Care Summit 1.0</fullName>
            </value>
            <value>
                <fullName>2026 HR Social Club Afterwork Hamburg</fullName>
            </value>
            <value>
                <fullName>2026 HR Minds Bensberg</fullName>
            </value>
            <value>
                <fullName>2026 Health Care Summit 3.0</fullName>
            </value>
            <value>
                <fullName>2026 OMR Festival</fullName>
            </value>
            <value>
                <fullName>2026 HeyDay Berlin</fullName>
            </value>
            <value>
                <fullName>2026 HeyDay Munich/Frankfurt</fullName>
            </value>
            <value>
                <fullName>2026 HeyDay Cologne/HH</fullName>
            </value>
            <value>
                <fullName>2026 Zukunft Personal Europe Köln</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>