force-app/main/default/objects/Lead/fields/Last_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher__c</fullName>
    <label>Last Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>