force-app/main/default/objects/Lead/fields/Last_Voucher_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher_Timestamp__c</fullName>
    <label>Last Voucher Timestamp</label>
    <type>Date</type>
</CustomField>