force-app/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>Stores the Lead ID to be able to transfer it to other objects on conversion.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores the Lead ID to be able to transfer it to other objects on conversion.</inlineHelpText>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>