force-app/main/default/objects/Lead/fields/Lead_Insert_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Insert_Source__c</fullName>
    <description>Identify source of new leads</description>
    <label>Lead Insert Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crefo</fullName>
            </value>
            <value>
                <fullName>Dealfront</fullName>
            </value>
            <value>
                <fullName>Webinar Laura</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>