force-app/main/default/objects/Lead/fields/Lead_Score_v02__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_v02__c</fullName>
    <description>New Lead Score based only on employee number implemented in 08.2021. RO-530</description>
    <formula>IF( NumberOfEmployees &gt;= 10000,&quot;AAA&quot;,
IF( NumberOfEmployees &gt;= 5000, &quot;AA&quot;,
IF( NumberOfEmployees &gt;= 2500, &quot;A&quot;,
IF( NumberOfEmployees &gt;= 1000, &quot;B&quot;,
IF( NumberOfEmployees &gt;= 500, &quot;C&quot;,
IF( NumberOfEmployees &gt;= 250, &quot;D&quot;,
IF( NumberOfEmployees &gt;= 50, &quot;E&quot;,
IF( NumberOfEmployees &gt;= 10, &quot;F&quot;,
&quot;G&quot;
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Lead Score based only on employee number implemented in 08.2021.</inlineHelpText>
    <label>Lead Score v02</label>
    <type>Text</type>
</CustomField>