force-app/main/default/objects/Lead/fields/LeanData__Matched_Buyer_Persona__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Buyer_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Buyer Persona</label>
    <referenceTo>LeanData__Buyer_Persona__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>