force-app/main/default/objects/Lead/fields/LeanData__Modified_Score__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Modified_Score__c</fullName>
    <label>Modified Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>